--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <script src="vector.js"></script>
+<script src="animation-manager.js"></script>
+<script src="defense-manager.js"></script>
+<script src="game-objects.js"></script>
 <script src="combat-methods.js"></script>
 <script src="renderer.js"></script>
 <script src="path-manager.js"></script>
