--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script src="vector.js"></script>
+<script src="wave-manager.js"></script>
 <script src="animation-manager.js"></script>
 <script src="defense-manager.js"></script>
 <script src="game-objects.js"></script>
@@ -6,5 +7,6 @@
 <script src="renderer.js"></script>
 <script src="path-manager.js"></script>
 <script src="build-tools.js"></script>
+<script src="game-config.js"></script>
 <script src="game.js"></script>
 <canvas id="game" width="1000" height="630" style="border: 1px solid black"/>
